[project]
name = "lounas-mcp"
version = "0.1.0"
description = "MCP server for lounaat.info Kauppakeskus Sello lunch menus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
]


[project.scripts]
lounas-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "scraper"]

